2002-10-25  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Fixed bootstrap (my last change broke it).

	* PkgVersion.pm: Instead of the old default values for CPPFLAGS and LDFLAGS,
	  we now set CPATH and LIBRARY_PATH to point to the Fink include/lib dirs.
	  This should avoid many problem encountered in the past. However, it may
	  also break a few existing packages.
	  Since the Apple C preprocessor seems to ignore CPATH, we also set 
	  by default -no-cpp-precomp (many packages need this anyway).

	* Validation.pm: recognize (No)SetCPATH and (No)SetLIBRARY_PATH fields.

2002-10-21  Ben Hines <bhines@alumni.ucsd.edu>

	* Services.pm, Fix typo in nesting too deep error.
	
2002-10-15  Max Horn  <max@quendi.de>

	* Engine.pm: Fixed a wrong 'circular dependencies' error caused by my 
	  recent changes.

2002-10-14  Max Horn  <max@quendi.de>

	* Validation.pm: Recognize Tar??FilesRename field

	* Engine.pm: Once more install all splitoffs with a single call to dpkg
	  (this is done to avoid certain update troubles with splitoffs).

	* PkgVersion.pm: Allow percent expansion in CustomMirror field
	 (patch #621175, thanks to Ben Hines)

	* Engine.pm: Rewrote parts of real_install to hopefully make it cleaner,
	  easier to understand, and less buggy when it comes to splitoffs.

2002-10-12 Dave Morrison <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: When a Shlibs field is present, write its contents 
	into DEBIAN/shlibs when building the deb

	* Validation.pm: Added Shlibs field
	
2002-10-10  Max Horn  <max@quendi.de>

	* Validation.pm: Added RunTimeVars field; warn if description ends with "."

2002-10-04  Benjamin Reed <rangerrick@users.sourceforge.net>

	* Engine.pm: Another small patch to the splitoff code.  This patch
	  changes the checking for flags (reinstall, rebuild, etc.) to match
	  the code used for installing the primary package, and it makes
	  sure that the parent splitoff is the last one installed on the