@@ -1708,9 +1708,8 @@ sub phase_deactivate {
 sub set_env {
   my $self = shift;
   my ($varname, $s, $expand);
-  my %defaults = ( "CPPFLAGS" => "-no-cpp-precomp",
-		   "LIBRARY_PATH" => "\%p/lib",
-		   "CPATH" => "\%p/include" );
+  my %defaults = ( "CPPFLAGS" => "-isystem \%p/include",
+		   "LIBRARY_PATH" => "\%p/lib" );
   my $bsbase = get_bsbase();
 
   # clean the environment
